<resources>
    <string name="app_name">College Canteen</string>
    <string name="mainlogo">logo</string>
    <string name="enterno">Enter your Phone Number</string>
    <string name="primbg">bg</string>
    <string name="header1">hdr1</string>
    <string name="midlayout">mid</string>
    <string name="clgcntn">College Canteen</string>
    <string name="categories">Categories</string>
    <string name="juices">Juices</string>
    <string name="shakes">Shakes</string>
    <string name="snacks">Snacks</string>
    <string name="noodles">Noodles</string>
    <string name="samosa">Samosa</string>
    <string name="pizza">Pizza</string>
    <string name="button">Continue to Menu</string>
    <string name="img">TODO</string>
    <string name="header2">header</string>
    <string name="outerlayout">lay</string>
    <string name="outerlayout2">info</string>
    <string name="today_s_menu">Today\'s Menu</string>
    <string name="shake">Shakes</string>
    <string name="add">Add to Tray +</string>
    <string name="burger">Burgers</string>
    <string name="cola">Soft Drinks</string>
    <string name="sandwich">Sandwiches</string>
    <string name="add_to_tray">Add to Tray +</string>
    <string name="veg">veg</string>
    <string name="veg2">TODO</string>
    <string name="veg3">TODO</string>
    <string name="nonveg">nonveg</string>
    <string name="bprice">₹39.99</string>
    <string name="pprice">₹89.99</string>
    <string name="sprice">₹49.99</string>
    <string name="shprice">₹69.99</string>
    <string name="cprice">₹29.99</string>
    <string name="samprice">₹19.99</string>
    <string name="wish">Have a great day ahead!</string>
    <string name="login">Login</string>
</resources>