<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="412dp"
        android:layout_height="730dp"
        android:contentDescription="@string/primbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/header1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="122dp"
        android:layout_height="142dp"
        android:layout_marginTop="352dp"
        android:background="@drawable/selbox"
        android:contentDescription="@string/midlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="124dp"
        android:layout_height="140dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/selbox"
        android:contentDescription="@string/midlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="124dp"
        android:layout_height="140dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/selbox"
        android:contentDescription="@string/midlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="124dp"
        android:layout_height="140dp"
        android:layout_marginTop="196dp"
        android:background="@drawable/selbox"
        android:contentDescription="@string/midlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="124dp"
        android:layout_height="140dp"
        android:layout_marginTop="352dp"
        android:background="@drawable/selbox"
        android:contentDescription="@string/midlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:layout_width="124dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="352dp"
        android:background="@drawable/selbox"
        android:contentDescription="@string/midlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="136dp"
        android:background="@drawable/headingcate"
        android:contentDescription="@string/categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="400sp"
        android:layout_height="77dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/clgcntn"
        android:fontFamily="@font/autour_one"
        android:text="@string/clgcntn"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="140dp"
        android:alpha="0.8"
        android:contentDescription="@string/categories"
        android:text="@string/categories"
        android:textAlignment="center"
        android:textColor="#755E42"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="76sp"
        android:layout_height="40sp"
        android:layout_marginTop="292dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/juices"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="76sp"
        android:layout_height="40sp"
        android:layout_marginTop="292dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/shakes"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="76sp"
        android:layout_height="40sp"
        android:layout_marginTop="292dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/snacks"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="76sp"
        android:layout_height="40sp"
        android:layout_marginTop="452dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/noodles"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="76sp"
        android:layout_height="40sp"
        android:layout_marginTop="448dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/samosa"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="76sp"
        android:layout_height="40sp"
        android:layout_marginTop="448dp"
        android:alpha="0.8"
        android:gravity="center"
        android:text="@string/pizza"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="504dp"
        android:backgroundTint="#755e42"
        android:text="@string/button"
        app:backgroundTint="#755e42"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="244dp"
        android:layout_height="194dp"
        android:layout_marginTop="536dp"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/undraw_hamburger_8ge6_removebg_preview" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="58dp"
        android:layout_height="68dp"
        android:layout_marginTop="224dp"
        android:contentDescription="@string/juices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/juice_removebg_preview"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="109dp"
        android:layout_height="114dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shake_removebg_preview"
        android:contentDescription="@string/shakes"/>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="85dp"
        android:layout_height="65dp"
        android:layout_marginTop="224dp"
        android:contentDescription="@string/snacks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/snack_removebg_preview"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:layout_marginTop="372dp"
        android:contentDescription="@string/noodles"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/noodle_removebg_preview" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="95dp"
        android:layout_height="103dp"
        android:layout_marginTop="372dp"
        android:contentDescription="@string/samosa"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/samosa_removebg_preview"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="92dp"
        android:layout_height="111dp"
        android:layout_marginTop="364dp"
        android:contentDescription="@string/pizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza_removebg_preview"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>